// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When given a message danger Message renders a snapshot properly 1`] = `
<div
  className="notification is-danger"
>
  <button
    className="delete"
    onClick={[Function]}
  />
  <span>
    Hello, world!
  </span>
</div>
`;

exports[`When given a message success Message renders a snapshot properly 1`] = `
<div
  className="notification is-success"
>
  <button
    className="delete"
    onClick={[Function]}
  />
  <span>
    Hello, world!
  </span>
</div>
`;
